comedy series left

--- a/CINESTOP/html/movies/action/kgf.html
+++ b/CINESTOP/html/movies/action/kgf.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Action</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DANGAL (2016)</h1>
+        <h1 class="contact-heading">KGF CHAPTER 1 (2018)</h1>
     </div>
 
 
@@ -113,40 +113,39 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dangal (transl. 'wrestling bout') is a 2016 Indian Hindi-language biographical sports drama film
-                directed by Nitesh Tiwari and produced by Aamir Khan and Kiran Rao under Aamir Khan Productions with
-                Siddharth Roy Kapur under The Walt Disney Company India. The film stars Khan as Mahavir Singh Phogat, a
-                pehlwani amateur wrestler who trains his daughters Geeta Phogat and Babita Kumari to become India's
-                first world-class female wrestlers.[9] Fatima Sana Shaikh and Sanya Malhotra portray the adult versions
-                of the two Phogat sisters, Zaira Wasim and Suhani Bhatnagar their younger versions, Sakshi Tanwar their
-                mother, and Aparshakti Khurana adult version of their cousin, Ritvik Sahore his younger version, all of
-                them except Shaikh, Tanwar and Sahore in their film debuts. <br>
+                KGF: Chapter 1 is a 2018 Indian Kannada-language period action film[5] written and directed by Prashanth
+                Neel, and produced by Vijay Kiragandur under the banner of Hombale Films. It is the first installment in
+                the KGF series, followed by KGF: Chapter 2. The film stars Yash, Srinidhi Shetty, Vasishta N. Simha,
+                Ramachandra Raju, Archana Jois, Anant Nag, Achyuth Kumar, Malavika Avinash, T. S. Nagabharana and B.
+                Suresha. Filmed on a budget of ₹80 crore (equivalent to ₹107 crore or US$13 million in 2023), it was the
+                most expensive Kannada film at the time of its release.[2] In the film, Rocky, a high-ranking mercenary,
+                working for a prominent gold mafia in Bombay, seeks power and wealth in order to fulfill his mother's
+                promise. Due to his high fame, the leaders of the gold mafia where he works hire him to assassinate
+                Garuda, the son of the founder of Kolar Gold Fields.<br>
 
-                Development on the film began in early 2013 when Tiwari began writing the script. Khan had interviewed
-                the Phogat sisters in 2014 on his talk show Satyamev Jayate, before Tiwari approached him with the
-                script months later, after which Khan became the lead actor and producer. Set primarily in the Indian
-                state of Haryana, principal photography commenced in September 2015 in the neighbouring Punjab.[10]
-                Satyajit Pande served as the cinematographer and Ballu Saluja as the editor. Pritam scored the film's
-                background music and soundtrack, lyrics for which were written by Amitabh Bhattacharya.[11][12] Kripa
-                Shankar Patel Bishnoi, a coach with the Indian women's wrestling team, trained Khan and the cast for the
-                wrestling sequences.[13] <br>
+                The film's development began in early 2015, after Neel finished writing the screenplay.[citation needed]
+                Filming began two years later, in January 2017. Most of the film is set in the Kolar Gold Fields and was
+                filmed in locales such as Kolar, Mysore, and parts of North Karnataka. The film's production was
+                completed in August 2018.[6] Bhuvan Gowda handled the cinematography and Srikanth edited the film.
+                Composer Ravi Basrur scored the film.<br>
 
-                Dangal was a commercial success, setting several records at the box office including highest-grossing
-                Hindi film, highest-grossing Indian film worldwide, the 46th highest-grossing non-English film (5th
-                highest at the time of release),[23][24] and the 19th highest-grossing sports film worldwide.[25]
-                Produced on a budget of ₹70 crore (US$8.3 million),[3] the film grossed ₹1,968−2,024 crore (US$340
-                million), worldwide by various different estimates, including $216.2 million in China,[28]
-                becoming one of the country's top 20 highest-grossing foreign films.[29] According to some estimates, it
-                remains the only Indian film to cross the ₹2000 crore mark, to this day.[30] The film has also been
-                watched more than 400 million times on Chinese streaming platforms, as of November 2018.</p>
+                The Kannada version of K.G.F: Chapter 1 was released on 20 December 2018 and the dubbed versions in
+                Telugu, Tamil, Malayalam and Hindi released the next day.[citation needed] The film received positive
+                reviews from critics and dialogues from the film became famous worldwide. The film did well commercially
+                and earned ₹250 crore (equivalent to ₹334 crore or US$40 million in 2023) in its entire theatrical run,
+                becoming the highest-grossing Kannada film until it was surpassed by its sequel. It turned out to be a
+                cult hit.[4] At the 66th National Film Awards, the film won two awards for Stunt Choreography and Best
+                Special Effects.[8] At the 66th Filmfare Awards South, the film won two awards from five nominations,
+                including the award for Best Film and Best Actor for Yash.
+            </p>
 
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Filmfare Awards</li>
-                <li style="color: lightgray;">Mirchi Music Awards</li>
-                <li style="color: lightgray;">News 18 Movie Awards</li>
-                <li style="color: lightgray;">Zee Cine Awards</li>
-                <li style="color: lightgray;">Indian Film Festival of Melbourne </li>
+                <li style="color: lightgray;">National Film Awards (India) — Best Stunt Choreography</li>
+                <li style="color: lightgray;">Filmfare Awards South — Best Film (Kannada)</li>
+                <li style="color: lightgray;">SIIMA Awards — Best Film (Kannada) </li>
+                <li style="color: lightgray;">Filmfare Awards South — Best Actor (Kannada) – Yash</li>
+                <li style="color: lightgray;">SIIMA Awards — Best Actor in a Leading Role (Kannada) – Yash</li>
             </ul>
             <br>
 
@@ -160,23 +159,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Sport</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 23 Dec 2016</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Nitesh Tiwari</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 20 December 2018</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Prashanth Neel</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 8.3/10
+                            <li>IMDb Rating: 8.2/10
                             </li>
-                            <li>Rotten Tomatoes: 88%
+                            <li>Rotten Tomatoes: 67%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Aamir Khan as Mahavir Singh</li>
-                            <li>Sakshi Tanwar as Daya Shobha</li>
-                            <li>Fatima Shaikh as Geeta Phogat</li>
-                            <li>Sanya Malhotra as Babita Kumari  </li>
-                            <li>Aparshakti Khurana as Omkar Singh</li>
+                            <li>Yash as Rocky</li>
+                            <li>Srinidhi Shetty as Reena Desai</li>
+                            <li>Vasishta N. Simha as Kamal</li>
+                            <li>Ramachandra Raju as Garuda</li>
+                            <li>Archana Jois as Shanthamma</li>
                         </ul>
 
                     </ul>
@@ -189,50 +188,53 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                ACTION </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="../action/kgf.html"><img
+                    src="https://i.pinimg.com/736x/62/69/60/62696025000ba635ac1a7f7d63b18a12.jpg"
+                    alt="Image 4"></a>
+            <h3>KGF Chapter 1
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.2</h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
+            <a href="../action/avenger_2.html"> <img
+                    src="https://i.pinimg.com/1200x/4b/8a/82/4b8a822b4580fd20862e8e8e7042f91d.jpg"
                     alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <h3>Avengers
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.4
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg"
+            <a href="../action/jawan.html"> <img
+                    src="https://i.pinimg.com/1200x/1c/8a/44/1c8a4441fe2ad933145135973f8496c6.jpg"
                     alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <h3>Jawan
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.9</h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood//dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
+            <a href="../action/fast_&_furious.html"> <img
+                    src="https://i.pinimg.com/736x/75/1b/0b/751b0b77b4bcb189b7ea12ce1835cd3a.jpg"
                     alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <h3>Fast & Furious 7 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.1</h3>
 
         </div>
 
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg"
+            <a href="../action/mission_impossible.html"> <img
+                    src="https://i.pinimg.com/1200x/a9/8c/b6/a98cb6d14371d1978ccefb838c505798.jpg"
                     alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <h3 style="font-size: 15px;">Mission Impossible
+                &nbsp;&nbsp;&nbsp; ★7.2
             </h3>
         </div>
     </div>
