--- a/CINESTOP/html/movies/adventure/dragon.html
+++ b/CINESTOP/html/movies/adventure/dragon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Adventure</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DHURANDHAR (2014)</h1>
+        <h1 class="contact-heading">HOW TO TRAIN YOUR DRAGON 3 (2019)</h1>
     </div>
 
 
@@ -113,38 +113,35 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dhurandhar (transl. Stalwart) is a 2025 Indian Hindi-language spy action thriller film written,
-                co-produced and directed by Aditya Dhar. Produced by Jyoti Deshpande's Jio Studios and Aditya and Lokesh
-                Dhar's B62 Studios, it stars Ranveer Singh, Akshaye Khanna, Sanjay Dutt, R. Madhavan, Arjun Rampal, Sara
-                Arjun and Rakesh Bedi, with Manav Gohil, Danish Pandor, Saumya Tandon, Gaurav Gera and Naveen Kaushik in
-                supporting roles.[4][5] In the first instalment of a two-part film series, it follows a decade-long
-                Indian intelligence operation where an undercover agent infiltrates Karachi’s criminal and political
-                underworld. <br>
-
-                From July 2024 to October 2025, Dhurandhar’s principal photography took place across Thailand, Punjab,
-                Mumbai, Ladakh and Himachal Pradesh; with music by Shashwat Sachdev, cinematography by Vikash Nowlakha
-                and editing by Shivkumar V. Panicker. The film was given the A certificate and classified as a work of
-                fiction by the Central Board of Film Certification (CBFC),[6], and the plot loosely joins several
-                real-life events involving geopolitical tensions such as 1999 IC-814 hijack, 2001 Indian Parliament
-                attack, 2008 Mumbai attacks, and Operation Lyari. <br>
-
-                Dhurandhar was released on 5 December 2025, and received mixed-to-positive reviews, with critics
-                praising the ensemble cast performance, particularly Singh and Khanna, Aditya's direction,
-                cinematography, action sequences, music, world building and production values, while its runtime pacing
-                received some criticism.[8] Grossing over ₹935 crore, the film became a major commercial success,
-                emerging as the highest grossing Indian film of 2025, 4th highest grossing Hindi film of all time, 9th
-                highest grossing Indian film of all time and the highest grossing A rated Indian film.[9][10] A sequel,
-                Dhurandhar: Part 2 – Revenge is scheduled to be released on 19 March 2026.
-                </p>
-
+                How to Train Your Dragon: The Hidden World is a 2019 American animated fantasy film written and directed
+                by Dean DeBlois, loosely based on the book series by Cressida Cowell. Produced by DreamWorks Animation,
+                it is the sequel to How to Train Your Dragon 2 (2014) and the final installment in the How to Train Your
+                Dragon trilogy.[4] The film stars the voices of Jay Baruchel, America Ferrera, F. Murray Abraham, Cate
+                Blanchett, Gerard Butler, Craig Ferguson, Jonah Hill, Christopher Mintz-Plasse, Kristen Wiig, and Kit
+                Harington. The film follows 21-year-old Hiccup seeking a dragon utopia known as the "Hidden World" while
+                coming to terms with Toothless's new bond with a female Fury, as they deal with the threat of Grimmel
+                the Grisly, a ruthless dragon hunter.
+                <br>
+                Discussions regarding a third How to Train Your Dragon film began in December 2010, with DeBlois later
+                stating that the second film was being intentionally designed as the second act of a trilogy. The
+                animation challenges of the production required DreamWorks Animation to update and invent new software
+                to handle complex tasks, such as lighting the Light Fury dragon.
+                <br>
+                How to Train Your Dragon: The Hidden World was released in Australia on January 3, 2019, and in the
+                United States by Universal Pictures on February 22. Like its predecessors, it received critical acclaim,
+                who considered it a satisfying conclusion to the trilogy, with praise for its animation, voice acting,
+                musical score, and emotional weight.[5] The film grossed $540 million worldwide. It received several
+                accolades: five Annie Awards nominations, a Golden Globe nomination, and a nomination for Best Animated
+                Feature at the 92nd Academy Awards.
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">No Awards</li>
-
+                <li style="color: lightgray;">Academy Awards (Oscars) — Best Animated Feature Film</li>
+                <li style="color: lightgray;">Golden Globe Awards — Best Animated Feature Film</li>
+                <li style="color: lightgray;">BAFTA Awards — Best Animated Film</li>
+                <li style="color: lightgray;">Annie Awards — Outstanding Achievement in Animated Feature</li>
+                <li style="color: lightgray;">Kids’ Choice Awards — Favorite Animated Movie</li>
             </ul>
             <br>
-
-
 
         </div>
 
@@ -154,23 +151,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 05 Dec 2025</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span>Aditya Dhar</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Adventure</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 3 January 2019</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> 	Dean DeBlois</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
                             <li>IMDb Rating: 7.8/10
                             </li>
-                            <li>Rotten Tomatoes: Not Rated Yet
+                            <li>Rotten Tomatoes: 90%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Ranveer Singh as Hamza Ali Mazari</li>
-                            <li>Akshaye Khanna as Rehman Dakait</li>
-                            <li>Sanjay Dutt as SP Chaudhary Aslam</li>
-                            <li>R. Madhavan as Ajay Sanyal</li>
-                            <li>Arjun Rampal as Major Iqbal </li>
+                            <li>Jay Baruchel – Hiccup Haddock III</li>
+                            <li>America Ferrera – Astrid Hofferson</li>
+                            <li>F. Murray Abraham – Grimmel Grisly</li>
+                            <li>Cate Blanchett – Valka Haddock</li>
+                            <li>Gerard Butler – Stoick the Vast</li>
                         </ul>
 
                     </ul>
@@ -183,50 +180,48 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                ADVENTURE </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="./mummy.html"><img src="https://i.pinimg.com/1200x/b7/aa/7b/b7aa7bba144f4e8e07edf6febcb2bdb9.jpg"
+                    alt="Image 4"></a>
+            <h3>The Mummy
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★5.4</h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img
-                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <a href="./dragon.html"> <img src="https://i.pinimg.com/736x/f5/1f/41/f51f41d966ed176d1d831f7c46a4cf60.jpg"
+                    alt="Image 2"></a>
+            <h3>HTTY Dragon 3
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.8
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img
-                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <a href="./bahubali.html"> <img
+                    src="https://i.pinimg.com/736x/46/6f/1f/466f1f61310dda36827ca9084eba61c4.jpg" alt="Image 3"></a>
+            <h3>Bahubali 2
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;★8.0</h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
-                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <a href="./king_kong.html"> <img
+                    src="https://i.pinimg.com/1200x/5d/5b/c5/5d5bc50c0066a01d7d3d5b99ccb19086.jpg" alt="Image 1"></a>
+            <h3>King Kong &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;★7.2</h3>
 
         </div>
 
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img
-                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <a href="./jurassic_world.html"> <img
+                    src="https://i.pinimg.com/736x/94/0d/72/940d72746e330addf615a9d7ca9ba445.jpg" alt="Image 5"></a>
+            <h3>Jurassic World
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★5.9
             </h3>
         </div>
     </div>
