--- a/CINESTOP/html/movies/adventure/king_kong.html
+++ b/CINESTOP/html/movies/adventure/king_kong.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Adventure</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DHURANDHAR (2014)</h1>
+        <h1 class="contact-heading">KING KONG (2005)</h1>
     </div>
 
 
@@ -113,38 +113,39 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dhurandhar (transl. Stalwart) is a 2025 Indian Hindi-language spy action thriller film written,
-                co-produced and directed by Aditya Dhar. Produced by Jyoti Deshpande's Jio Studios and Aditya and Lokesh
-                Dhar's B62 Studios, it stars Ranveer Singh, Akshaye Khanna, Sanjay Dutt, R. Madhavan, Arjun Rampal, Sara
-                Arjun and Rakesh Bedi, with Manav Gohil, Danish Pandor, Saumya Tandon, Gaurav Gera and Naveen Kaushik in
-                supporting roles.[4][5] In the first instalment of a two-part film series, it follows a decade-long
-                Indian intelligence operation where an undercover agent infiltrates Karachi’s criminal and political
-                underworld. <br>
-
-                From July 2024 to October 2025, Dhurandhar’s principal photography took place across Thailand, Punjab,
-                Mumbai, Ladakh and Himachal Pradesh; with music by Shashwat Sachdev, cinematography by Vikash Nowlakha
-                and editing by Shivkumar V. Panicker. The film was given the A certificate and classified as a work of
-                fiction by the Central Board of Film Certification (CBFC),[6], and the plot loosely joins several
-                real-life events involving geopolitical tensions such as 1999 IC-814 hijack, 2001 Indian Parliament
-                attack, 2008 Mumbai attacks, and Operation Lyari. <br>
-
-                Dhurandhar was released on 5 December 2025, and received mixed-to-positive reviews, with critics
-                praising the ensemble cast performance, particularly Singh and Khanna, Aditya's direction,
-                cinematography, action sequences, music, world building and production values, while its runtime pacing
-                received some criticism.[8] Grossing over ₹935 crore, the film became a major commercial success,
-                emerging as the highest grossing Indian film of 2025, 4th highest grossing Hindi film of all time, 9th
-                highest grossing Indian film of all time and the highest grossing A rated Indian film.[9][10] A sequel,
-                Dhurandhar: Part 2 – Revenge is scheduled to be released on 19 March 2026.
-                </p>
-
+                King Kong, also referred to simply as Kong, is a fictional giant monster, or kaiju, resembling a
+                gorilla, who has appeared in various media since 1933. The character has become an international pop
+                culture icon,[18] appearing in several movies, comics, videogames and television series, as well as
+                repeatedly crossing over with the Godzilla franchise. Kong has been dubbed the King of the Beasts.[19]
+                <br>
+                His first appearance was in the novelization of the 1933 film King Kong from RKO Pictures, with the film
+                premiering a little over two months later. A sequel quickly followed that same year with The Son of
+                Kong, featuring Little Kong. The Japanese film company Toho later produced King Kong vs. Godzilla
+                (1962), featuring a giant Kong battling Toho's Godzilla, and King Kong Escapes (1967), a film loosely
+                based on Rankin/Bass' The King Kong Show (1966–1969). In 1976, Dino De Laurentiis produced a modern
+                remake of the original film directed by John Guillermin. A sequel, King Kong Lives, followed a decade
+                later featuring a Lady Kong. Another remake of the original, set in 1933, was released in 2005 by
+                filmmaker Peter Jackson.
+                <br>
+                Kong: Skull Island (2017), set in 1973, is part of Warner Bros. Pictures and Legendary Entertainment's
+                Monsterverse, which began with a reboot of Godzilla in 2014. A sequel, Godzilla vs. Kong was released in
+                2021. It was followed by the film Godzilla x Kong: The New Empire in 2024, which featured more of Kong's
+                kind.
+                <br>
+                King Kong has inspired a number of imitators, parodies, cartoons, books, comics, video games, theme park
+                rides, and a stage play.[20] King Kong has also crossed over into other franchises, such as Planet of
+                the Apes,[21] and encountered characters from other franchises in crossover media, such as pulp
+                characters Doc Savage and Tarzan, and the Justice League.[22] His role in the different narratives
+                varies, ranging from an egregious monster to a tragic antihero.
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">No Awards</li>
-
+                <li style="color: lightgray;">Academy Awards (Oscars) — Best Visual Effects</li>
+                <li style="color: lightgray;">BAFTA Awards — Best Special Visual Effects</li>
+                <li style="color: lightgray;">Academy Awards (Oscars) — Best Sound Mixing</li>
+                <li style="color: lightgray;">Saturn Awards — Best Director (Peter Jackson)</li>
+                <li style="color: lightgray;">Academy Awards (Oscars) — Best Sound Editing</li>
             </ul>
             <br>
-
-
 
         </div>
 
@@ -154,23 +155,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 05 Dec 2025</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span>Aditya Dhar</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Adventure</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 5 December 2005</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Peter Jackson</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 7.8/10
+                            <li>IMDb Rating: 7.2/10
                             </li>
-                            <li>Rotten Tomatoes: Not Rated Yet
+                            <li>Rotten Tomatoes: 97%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Ranveer Singh as Hamza Ali Mazari</li>
-                            <li>Akshaye Khanna as Rehman Dakait</li>
-                            <li>Sanjay Dutt as SP Chaudhary Aslam</li>
-                            <li>R. Madhavan as Ajay Sanyal</li>
-                            <li>Arjun Rampal as Major Iqbal </li>
+                            <li>Naomi Watts as Ann Darrow</li>
+                            <li>Jack Black as Carl Denham</li>
+                            <li>Adrien Brody as Jack Driscoll</li>
+                            <li>Jamie Bell as Jimmy</li>
+                            <li>Colin Hanks as Preston</li>
                         </ul>
 
                     </ul>
@@ -183,50 +184,48 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                ADVENTURE </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="./mummy.html"><img src="https://i.pinimg.com/1200x/b7/aa/7b/b7aa7bba144f4e8e07edf6febcb2bdb9.jpg"
+                    alt="Image 4"></a>
+            <h3>The Mummy
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★5.4</h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img
-                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <a href="./dragon.html"> <img src="https://i.pinimg.com/736x/f5/1f/41/f51f41d966ed176d1d831f7c46a4cf60.jpg"
+                    alt="Image 2"></a>
+            <h3>HTTY Dragon 3
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.8
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img
-                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <a href="./bahubali.html"> <img
+                    src="https://i.pinimg.com/736x/46/6f/1f/466f1f61310dda36827ca9084eba61c4.jpg" alt="Image 3"></a>
+            <h3>Bahubali 2
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;★8.0</h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
-                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <a href="./king_kong.html"> <img
+                    src="https://i.pinimg.com/1200x/5d/5b/c5/5d5bc50c0066a01d7d3d5b99ccb19086.jpg" alt="Image 1"></a>
+            <h3>King Kong &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;★7.2</h3>
 
         </div>
 
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img
-                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <a href="./jurassic_world.html"> <img
+                    src="https://i.pinimg.com/736x/94/0d/72/940d72746e330addf615a9d7ca9ba445.jpg" alt="Image 5"></a>
+            <h3>Jurassic World
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★5.9
             </h3>
         </div>
     </div>
