--- a/CINESTOP/html/movies/hollywood/inside_out_2.html
+++ b/CINESTOP/html/movies/hollywood/inside_out_2.html
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">AVENGERS - INFINITY WAR (2018)</h1>
+        <h1 class="contact-heading">INSIDE OUT 2 (2024)</h1>
     </div>
 
 
@@ -113,45 +113,32 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Avengers: Infinity War is a 2018 American superhero film based on the Marvel Comics superhero team the
-                Avengers. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the
-                sequel to The Avengers (2012) and Avengers: Age of Ultron (2015), and the 19th film in the Marvel
-                Cinematic Universe (MCU). Directed by Anthony and Joe Russo and written by Christopher Markus and
-                Stephen McFeely, the film features an ensemble cast including Robert Downey Jr., Chris Hemsworth, Mark
-                Ruffalo, Chris Evans, Scarlett Johansson, Benedict Cumberbatch, Don Cheadle, Tom Holland, Chadwick
-                Boseman, Paul Bettany, Elizabeth Olsen, Anthony Mackie, Sebastian Stan, Danai Gurira, Letitia Wright,
-                Dave Bautista, Zoe Saldaña, Josh Brolin, and Chris Pratt. In the film, the Avengers and the Guardians of
-                the Galaxy attempt to stop Thanos from collecting the six powerful Infinity Stones as part of his quest
-                to kill half of all life in the universe. <br>
-
-                The film was announced in October 2014 as Avengers: Infinity War – Part 1. The Russo brothers came on
-                board to direct in April 2015, and a month later, Markus and McFeely signed on to write the script for
-                the film, which draws inspiration from Jim Starlin's 1991 comic book The Infinity Gauntlet and Jonathan
-                Hickman's 2013 comic book Infinity. In 2016, Marvel shortened the title to Avengers: Infinity War.
-                Filming began in January 2017 at Pinewood Atlanta Studios in Fayette County, Georgia, with a large cast
-                consisting mostly of actors reprising their roles from previous MCU films, including Brolin as Thanos.
-                The production lasted until July 2017, shooting back-to-back with a direct sequel, Avengers: Endgame
-                (2019). Additional filming took place in Scotland, the Downtown Atlanta area, and New York City. With an
-                estimated budget of $325–400 million, the film is one of the most expensive films ever made. <br>
-
-                Avengers: Infinity War premiered at the Dolby Theatre in Hollywood, Los Angeles, on April 23, 2018, and
-                was released in the United States on April 27 as part of Phase Three of the MCU. The film received
-                positive reviews from critics, with praise for Brolin's performance and the Russo brothers' direction,
-                as well as the visual effects, action sequences, dark tone, and musical score. It was a major box-office
-                success, becoming the fourth film and the first superhero film to gross over $2 billion worldwide,
-                breaking numerous box office records, and becoming the highest-grossing film of 2018 and the
-                fourth-highest-grossing film at the time of its release both worldwide and in the United States and
-                Canada. It received a nomination for Best Visual Effects at the 91st Academy Awards, among numerous
-                other accolades. The sequel, Avengers: Endgame, was released in April 2019.
+                Inside Out 2 is a 2024 American animated coming-of-age film produced by Pixar 
+                Animation Studios for Walt Disney Pictures. The sequel to Inside Out (2015), it was
+                directed by Kelsey Mann[c] in his feature film directorial debut and was produced 
+                by Mark Nielsen, from a screenplay written by Meg LeFauve and Dave Holstein, and a 
+                story conceived by Mann and LeFauve. Amy Poehler, Phyllis Smith, Lewis Black, 
+                Diane Lane, and Kyle MacLachlan reprise their roles from the first film, with
+                Maya Hawke, Kensington Tallman (replacing Kaitlyn Dias from the first film), 
+                Liza Lapira (replacing Mindy Kaling from the first film), Tony Hale (replacing
+                Bill Hader from the first film), Ayo Edebiri, Lilimar, Grace Lu, Sumayyah 
+                Nuriddin-Green, Adèle Exarchopoulos, and Paul Walter Hauser joining the cast.
+                The film follows Riley's emotions unexpectedly joined by new emotions, eager
+                to take control of her mind.<br>
+                Development on Inside Out 2 began in early 2020, with Mann drawing inspiration 
+                from personal childhood experiences. The creative team initially explored a wider
+                range of new emotions before narrowing the focus for narrative clarity, with Anxiety emerging as a central addition. Clinical psychologists, including Lisa Damour and Dacher Keltner, were consulted to ensure an accurate portrayal of adolescent emotional development, while a group of teenagers provided feedback on character and story authenticity. The film's premise shifted during development from a talent show to Riley's involvement in hockey. The production also marked the first Pixar feature scored by a woman, Andrea Datzman. Animation development emphasized spatial consistency through isometric mapping, and casting changes were driven in part by compensation disputes, resulting in the recasting of the characters Fear and Disgust.
+                Inside Out 2 premiered at the El Capitan Theatre in Hollywood, Los Angeles, on June 
+                10, 2024, and was released in the United States on June 14. 
             </p>
 
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Academy Awards (Oscars) — Best Visual Effects (Nominated)</li>
-                <li style="color: lightgray;">British Academy Film Awards (BAFTA)</li>
-                <li style="color: lightgray;">Saturn Awards</li>
-                <li style="color: lightgray;">People’s Choice Awards</li>
-                <li style="color: lightgray;">Critics’ Choice Movie Awards</li>
+                <li style="color: lightgray;">Academy Awards (Oscars) — Best Animated Feature Film</li>
+                <li style="color: lightgray;">Golden Globe Awards — Best Animated Feature Film</li>
+                <li style="color: lightgray;">Critics’ Choice Movie Awards — Best Animated Feature </li>
+                <li style="color: lightgray;">British Academy Film Awards (BAFTA) — Best Animated Film </li>
+                <li style="color: lightgray;">Annie Awards — Best Animated Feature (Theatrical)</li>
             </ul>
             <br>
 
@@ -165,23 +152,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> April 23, 2018</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Anthony Russo, Joe Russo</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Animation</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 10 June 2024</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> 	Kelsey Mann</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 8.4/10
+                            <li>IMDb Rating: 7.5/10
                             </li>
-                            <li>Rotten Tomatoes: 83%
+                            <li>Rotten Tomatoes: 92%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Robert Downey Jr. as  Iron Man</li>
-                            <li>Chris Hemsworth as Thor</li>
-                            <li>Mark Ruffalo as Hulk</li>
-                            <li>Chris Evans as Captain America </li>
-                            <li>Scarlett Johansson as Black Widow</li>
+                            <li>Amy Poehler as Joy</li>
+                            <li>Maya Hawke as Anxiety</li>
+                            <li>Liza Lapira as Disgust</li>
+                            <li>Tony Hale as Fear </li>
+                            <li>Lewis Black as Anger</li>
                         </ul>
 
                     </ul>
