--- a/CINESTOP/html/category.html
+++ b/CINESTOP/html/category.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>CineStop</title>
+    <title>Categories</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
