--- a/CINESTOP/html/movies/action/fast_&_furious.html
+++ b/CINESTOP/html/movies/action/fast_&_furious.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Action</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DHURANDHAR (2014)</h1>
+        <h1 class="contact-heading">FAST & FURIOUS 7 (2015)</h1>
     </div>
 
 
@@ -113,34 +113,31 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dhurandhar (transl. Stalwart) is a 2025 Indian Hindi-language spy action thriller film written,
-                co-produced and directed by Aditya Dhar. Produced by Jyoti Deshpande's Jio Studios and Aditya and Lokesh
-                Dhar's B62 Studios, it stars Ranveer Singh, Akshaye Khanna, Sanjay Dutt, R. Madhavan, Arjun Rampal, Sara
-                Arjun and Rakesh Bedi, with Manav Gohil, Danish Pandor, Saumya Tandon, Gaurav Gera and Naveen Kaushik in
-                supporting roles.[4][5] In the first instalment of a two-part film series, it follows a decade-long
-                Indian intelligence operation where an undercover agent infiltrates Karachi’s criminal and political
-                underworld. <br>
+                Furious 7 (also known as Fast & Furious 7) is a 2015 American action film directed by James Wan and
+                written by Chris Morgan. It is the sequel to Fast & Furious 6 (2013), a follow-up to The Fast and the
+                Furious: Tokyo Drift (2006), and the seventh installment in the Fast & Furious franchise. The film stars
+                an ensemble cast including Vin Diesel, Paul Walker (in his final film role), Dwayne Johnson, Michelle
+                Rodriguez, Tyrese Gibson, Ludacris, Jordana Brewster, Djimon Hounsou, Kurt Russell and Jason Statham. In
+                the film, Dominic Toretto, Brian O'Conner and their team are recruited by covert ops leader Mr. Nobody
+                to prevent Mose Jakande (Hounsou), a terrorist, from obtaining a hacking program known as God's Eye, all
+                while being hunted by Deckard Shaw, the brother of Owen Shaw.<br>
 
-                From July 2024 to October 2025, Dhurandhar’s principal photography took place across Thailand, Punjab,
-                Mumbai, Ladakh and Himachal Pradesh; with music by Shashwat Sachdev, cinematography by Vikash Nowlakha
-                and editing by Shivkumar V. Panicker. The film was given the A certificate and classified as a work of
-                fiction by the Central Board of Film Certification (CBFC),[6], and the plot loosely joins several
-                real-life events involving geopolitical tensions such as 1999 IC-814 hijack, 2001 Indian Parliament
-                attack, 2008 Mumbai attacks, and Operation Lyari. <br>
-
-                Dhurandhar was released on 5 December 2025, and received mixed-to-positive reviews, with critics
-                praising the ensemble cast performance, particularly Singh and Khanna, Aditya's direction,
-                cinematography, action sequences, music, world building and production values, while its runtime pacing
-                received some criticism.[8] Grossing over ₹935 crore, the film became a major commercial success,
-                emerging as the highest grossing Indian film of 2025, 4th highest grossing Hindi film of all time, 9th
-                highest grossing Indian film of all time and the highest grossing A rated Indian film.[9][10] A sequel,
-                Dhurandhar: Part 2 – Revenge is scheduled to be released on 19 March 2026.
-                </p>
-
+                Furious 7 premiered at the TCL Chinese Theatre in Los Angeles on April 1, 2015, and was released in the
+                United States on April 3, by Universal Pictures. The film was a box office success and it received
+                positive reviews from critics for its action sequences and emotional tribute to Walker, with many
+                considering it to be one of the best films in the franchise. It grossed $1.515 billion worldwide, making
+                it the third-highest-grossing film of 2015 and the fourth-highest-grossing film of all time at the time
+                of release. It also set a record for the second-highest opening weekend of its time. It was the
+                highest-grossing film of 2015 internationally and became the highest-grossing film of the franchise in
+                the first twelve days of its theatrical release. A sequel titled The Fate of the Furious was released on
+                April 14, 2017.
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">No Awards</li>
-
+                <li style="color: lightgray;">MTV Movie Awards — Best On-Screen Team</li>
+                <li style="color: lightgray;">People’s Choice Awards — Favorite Action Movie</li>
+                <li style="color: lightgray;">Teen Choice Awards — Choice Movie: Action</li>
+                <li style="color: lightgray;">Teen Choice Awards — Choice Movie Actor: Action (Vin Diesel)</li>
+                <li style="color: lightgray;">Teen Choice Awards — Choice Movie Actor: Action (Paul Walker) </li>
             </ul>
             <br>
 
@@ -155,22 +152,22 @@
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
                         <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 05 Dec 2025</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span>Aditya Dhar</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 1 April 2015</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> James Wan</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 7.8/10
+                            <li>IMDb Rating: 8.1/10
                             </li>
-                            <li>Rotten Tomatoes: Not Rated Yet
+                            <li>Rotten Tomatoes: 81%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Ranveer Singh as Hamza Ali Mazari</li>
-                            <li>Akshaye Khanna as Rehman Dakait</li>
-                            <li>Sanjay Dutt as SP Chaudhary Aslam</li>
-                            <li>R. Madhavan as Ajay Sanyal</li>
-                            <li>Arjun Rampal as Major Iqbal </li>
+                            <li>Vin Diesel as Dominic Toretto</li>
+                            <li>Paul Walker as Brian O'Conner</li>
+                            <li>Dwayne Johnson as Luke Hobbs</li>
+                            <li>Michelle Rodriguez as Letty Ortiz </li>
+                            <li>Tyrese Gibson as Roman Pearce</li>
                         </ul>
 
                     </ul>
@@ -183,50 +180,48 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                ACTION </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="../action/kgf.html"><img
+                    src="https://i.pinimg.com/736x/62/69/60/62696025000ba635ac1a7f7d63b18a12.jpg" alt="Image 4"></a>
+            <h3>KGF Chapter 1
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.2</h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img
-                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <a href="../action/avenger_2.html"> <img
+                    src="https://i.pinimg.com/1200x/4b/8a/82/4b8a822b4580fd20862e8e8e7042f91d.jpg" alt="Image 2"></a>
+            <h3>Avengers
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.4
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img
-                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <a href="../action/jawan.html"> <img
+                    src="https://i.pinimg.com/1200x/1c/8a/44/1c8a4441fe2ad933145135973f8496c6.jpg" alt="Image 3"></a>
+            <h3>Jawan
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.9</h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
-                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <a href="../action/fast_&_furious.html"> <img
+                    src="https://i.pinimg.com/736x/75/1b/0b/751b0b77b4bcb189b7ea12ce1835cd3a.jpg" alt="Image 1"></a>
+            <h3>Fast & Furious 7 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.1</h3>
 
         </div>
 
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img
-                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <a href="../action/mission_impossible.html"> <img
+                    src="https://i.pinimg.com/1200x/a9/8c/b6/a98cb6d14371d1978ccefb838c505798.jpg" alt="Image 5"></a>
+            <h3 style="font-size: 15px;">Mission Impossible
+                &nbsp;&nbsp;&nbsp; ★7.2
             </h3>
         </div>
     </div>
