--- a/CINESTOP/html/movies/action/jawan.html
+++ b/CINESTOP/html/movies/action/jawan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Action</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DHURANDHAR (2014)</h1>
+        <h1 class="contact-heading">JAWAN (2023)</h1>
     </div>
 
 
@@ -113,34 +113,35 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dhurandhar (transl. Stalwart) is a 2025 Indian Hindi-language spy action thriller film written,
-                co-produced and directed by Aditya Dhar. Produced by Jyoti Deshpande's Jio Studios and Aditya and Lokesh
-                Dhar's B62 Studios, it stars Ranveer Singh, Akshaye Khanna, Sanjay Dutt, R. Madhavan, Arjun Rampal, Sara
-                Arjun and Rakesh Bedi, with Manav Gohil, Danish Pandor, Saumya Tandon, Gaurav Gera and Naveen Kaushik in
-                supporting roles.[4][5] In the first instalment of a two-part film series, it follows a decade-long
-                Indian intelligence operation where an undercover agent infiltrates Karachi’s criminal and political
-                underworld. <br>
-
-                From July 2024 to October 2025, Dhurandhar’s principal photography took place across Thailand, Punjab,
-                Mumbai, Ladakh and Himachal Pradesh; with music by Shashwat Sachdev, cinematography by Vikash Nowlakha
-                and editing by Shivkumar V. Panicker. The film was given the A certificate and classified as a work of
-                fiction by the Central Board of Film Certification (CBFC),[6], and the plot loosely joins several
-                real-life events involving geopolitical tensions such as 1999 IC-814 hijack, 2001 Indian Parliament
-                attack, 2008 Mumbai attacks, and Operation Lyari. <br>
-
-                Dhurandhar was released on 5 December 2025, and received mixed-to-positive reviews, with critics
-                praising the ensemble cast performance, particularly Singh and Khanna, Aditya's direction,
-                cinematography, action sequences, music, world building and production values, while its runtime pacing
-                received some criticism.[8] Grossing over ₹935 crore, the film became a major commercial success,
-                emerging as the highest grossing Indian film of 2025, 4th highest grossing Hindi film of all time, 9th
-                highest grossing Indian film of all time and the highest grossing A rated Indian film.[9][10] A sequel,
-                Dhurandhar: Part 2 – Revenge is scheduled to be released on 19 March 2026.
-                </p>
-
+                Jawan (transl. Soldier) is a 2023 Indian Hindi-language action thriller film co-written and directed by
+                Atlee (in his Hindi film debut).[5] It is produced by Gauri Khan and Gaurav Verma under Red Chillies
+                Entertainment. The film stars Shah Rukh Khan in a dual role as lookalike father and son alongside Vijay
+                Sethupathi and Nayanthara (in her Hindi film debut). In the film, Azad, the jailer of a woman's prison,
+                is a vigilante who recruits inmates and commits acts that shed light on corruption in India.
+                <br>
+                Principal photography commenced in September 2021 with filming taking place in Pune, Mumbai, Goregaon,
+                Hyderabad, Chennai, Rajasthan and Aurangabad. The film's soundtrack and musical score were composed by
+                Anirudh Ravichander, with cinematography by G. K. Vishnu and editing by Ruben. A few scenes were
+                simultaneously re-shot for the Tamil version of the film, particularly Khan's appearance in the song
+                "Zinda Banda", Sethupathi's portions and scenes featuring Yogi Babu.
+                <br>
+                Jawan was initially planned for release on 2 June 2023, but was postponed due to unfinished
+                post-production work.[8] It was theatrically released on 7 September 2023 in standard, IMAX, 4DX and
+                other premium formats, coinciding with Janmashtami. Jawan received acclaim from critics who praised its
+                cast performances, direction, action sequences, musical score, story, and cinematography.[9] The film
+                set several box-office records for a Hindi film, overtaking those set by Khan's previous release Pathaan
+                (2023). Grossing over ₹1,148.32 crore, it emerged as the highest-grossing Indian film of 2023, the
+                second highest-grossing Hindi film and the sixth highest-grossing Indian film.[10] At the 69th Filmfare
+                Awards, the film received 14 nominations, including Best Film and Best Director.[11] At the 71st
+                National Film Awards, the film won 2 awards: Best Actor in a Leading Role (Khan) and Best Female
+                Playback Singer (Shilpa Rao for "Chaleya").
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">No Awards</li>
-
+                <li style="color: lightgray;">National Film Awards — Best Actor (Shah Rukh Khan)</li>
+                <li style="color: lightgray;">Filmfare Awards — Best Film (Jawan)</li>
+                <li style="color: lightgray;">Filmfare Awards — Best Director (Atlee)</li>
+                <li style="color: lightgray;">Astra Film Awards — Best International Feature</li>
+                <li style="color: lightgray;">Zee Cine Awards — Best Film </li>
             </ul>
             <br>
 
@@ -155,22 +156,22 @@
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
                         <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 05 Dec 2025</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span>Aditya Dhar</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 7 September 2023</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Atlee</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 7.8/10
+                            <li>IMDb Rating: 6.9/10
                             </li>
-                            <li>Rotten Tomatoes: Not Rated Yet
+                            <li>Rotten Tomatoes: 85%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Ranveer Singh as Hamza Ali Mazari</li>
-                            <li>Akshaye Khanna as Rehman Dakait</li>
-                            <li>Sanjay Dutt as SP Chaudhary Aslam</li>
-                            <li>R. Madhavan as Ajay Sanyal</li>
-                            <li>Arjun Rampal as Major Iqbal </li>
+                            <li>SRK (Dual Role) Vikram Rathore, ACP</li>
+                            <li>Vijay Sethupathi as Kalee Gaikwad</li>
+                            <li>Nayanthara as Narmada Rai</li>
+                            <li>Sanjay Dutt as STF Madhavan Naik  </li>
+                            <li>Deepika as Aiswarya Rathore</li>
                         </ul>
 
                     </ul>
@@ -183,50 +184,48 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                ACTION </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="../action/kgf.html"><img
+                    src="https://i.pinimg.com/736x/62/69/60/62696025000ba635ac1a7f7d63b18a12.jpg" alt="Image 4"></a>
+            <h3>KGF Chapter 1
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.2</h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img
-                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <a href="../action/avenger_2.html"> <img
+                    src="https://i.pinimg.com/1200x/4b/8a/82/4b8a822b4580fd20862e8e8e7042f91d.jpg" alt="Image 2"></a>
+            <h3>Avengers
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.4
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img
-                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <a href="../action/jawan.html"> <img
+                    src="https://i.pinimg.com/1200x/1c/8a/44/1c8a4441fe2ad933145135973f8496c6.jpg" alt="Image 3"></a>
+            <h3>Jawan
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.9</h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
-                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <a href="../action/fast_&_furious.html"> <img
+                    src="https://i.pinimg.com/736x/75/1b/0b/751b0b77b4bcb189b7ea12ce1835cd3a.jpg" alt="Image 1"></a>
+            <h3>Fast & Furious 7 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.1</h3>
 
         </div>
 
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img
-                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <a href="../action/mission_impossible.html"> <img
+                    src="https://i.pinimg.com/1200x/a9/8c/b6/a98cb6d14371d1978ccefb838c505798.jpg" alt="Image 5"></a>
+            <h3 style="font-size: 15px;">Mission Impossible
+                &nbsp;&nbsp;&nbsp; ★7.2
             </h3>
         </div>
     </div>
