--- a/CINESTOP/html/movies/adventure/mummy.html
+++ b/CINESTOP/html/movies/adventure/mummy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Adventure</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DHURANDHAR (2014)</h1>
+        <h1 class="contact-heading">THE MUMMY (1999)</h1>
     </div>
 
 
@@ -113,38 +113,37 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dhurandhar (transl. Stalwart) is a 2025 Indian Hindi-language spy action thriller film written,
-                co-produced and directed by Aditya Dhar. Produced by Jyoti Deshpande's Jio Studios and Aditya and Lokesh
-                Dhar's B62 Studios, it stars Ranveer Singh, Akshaye Khanna, Sanjay Dutt, R. Madhavan, Arjun Rampal, Sara
-                Arjun and Rakesh Bedi, with Manav Gohil, Danish Pandor, Saumya Tandon, Gaurav Gera and Naveen Kaushik in
-                supporting roles.[4][5] In the first instalment of a two-part film series, it follows a decade-long
-                Indian intelligence operation where an undercover agent infiltrates Karachi’s criminal and political
-                underworld. <br>
-
-                From July 2024 to October 2025, Dhurandhar’s principal photography took place across Thailand, Punjab,
-                Mumbai, Ladakh and Himachal Pradesh; with music by Shashwat Sachdev, cinematography by Vikash Nowlakha
-                and editing by Shivkumar V. Panicker. The film was given the A certificate and classified as a work of
-                fiction by the Central Board of Film Certification (CBFC),[6], and the plot loosely joins several
-                real-life events involving geopolitical tensions such as 1999 IC-814 hijack, 2001 Indian Parliament
-                attack, 2008 Mumbai attacks, and Operation Lyari. <br>
-
-                Dhurandhar was released on 5 December 2025, and received mixed-to-positive reviews, with critics
-                praising the ensemble cast performance, particularly Singh and Khanna, Aditya's direction,
-                cinematography, action sequences, music, world building and production values, while its runtime pacing
-                received some criticism.[8] Grossing over ₹935 crore, the film became a major commercial success,
-                emerging as the highest grossing Indian film of 2025, 4th highest grossing Hindi film of all time, 9th
-                highest grossing Indian film of all time and the highest grossing A rated Indian film.[9][10] A sequel,
-                Dhurandhar: Part 2 – Revenge is scheduled to be released on 19 March 2026.
-                </p>
-
+                The Mummy is a 1999 American action-adventure film written and directed by Stephen Sommers, starring
+                Brendan Fraser, Rachel Weisz, John Hannah, and Arnold Vosloo as the reanimated mummy. It is a remake of
+                the 1932 film and part of the larger Universal Monsters franchise. The film follows adventurer and
+                treasure hunter Rick O'Connell as he travels to Hamunaptra, the City of the Dead, with librarian Evelyn
+                Carnahan and her older brother Jonathan, where they accidentally awaken Imhotep, a cursed high priest
+                with supernatural powers.
+                <br>
+                Development took years, with multiple screenplays and directors attached. In 1997, Sommers successfully
+                pitched his version of a more adventurous and romantic take on the source material. Filming took place
+                in Morocco and the United Kingdom; the crew endured dehydration, sandstorms, and snakes shooting on
+                location in the Sahara Desert. Industrial Light & Magic provided many of the visual effects, blending
+                live-action footage and computer-generated imagery to create the titular monster. Jerry Goldsmith
+                composed the orchestral score.
+                <br>
+                The Mummy was theatrically released on May 7, 1999, by Universal Pictures. The film received mixed
+                critical reviews but grossed $422.5 million worldwide against a production budget of $80 million,
+                becoming the sixth-highest-grossing film of 1999. The film started a new franchise, with two direct
+                sequels, The Mummy Returns in 2001 and The Mummy: Tomb of the Dragon Emperor in 2008, and various
+                spinoffs such as an animated series which ran from 2001 to 2003, and the prequel The Scorpion King in
+                2002, which led to sequels of its own. In 2017, an attempt was made to start another Universal Monsters
+                franchise with The Mummy starring Tom Cruise. In November 2025, a new sequel featuring Fraser and Weisz
+                was announced, to be directed by Matt Bettinelli-Olpin and Tyler Gillett of Radio Silence Productions.
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">No Awards</li>
-
+                <li style="color: lightgray;">Teen Choice Awards — Choice Movie: Action</li>
+                <li style="color: lightgray;">Golden Trailer Awards — Best Horror/Thriller TV Spot</li>
+                <li style="color: lightgray;">Teen Choice Awards — Choice Movie Actor: Action (Tom Cruise)</li>
+                <li style="color: lightgray;">Golden Trailer Awards — Best Summer 2017 Blockbuster Poster</li>
+                <li style="color: lightgray;">Saturn Awards — Best Make-Up / Hairstyling</li>
             </ul>
             <br>
-
-
 
         </div>
 
@@ -154,23 +153,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Action</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 05 Dec 2025</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span>Aditya Dhar</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Adventure</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 7 May 1999</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> Stephen Sommers</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 7.8/10
+                            <li>IMDb Rating: 5.4/10
                             </li>
-                            <li>Rotten Tomatoes: Not Rated Yet
+                            <li>Rotten Tomatoes: 63%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Ranveer Singh as Hamza Ali Mazari</li>
-                            <li>Akshaye Khanna as Rehman Dakait</li>
-                            <li>Sanjay Dutt as SP Chaudhary Aslam</li>
-                            <li>R. Madhavan as Ajay Sanyal</li>
-                            <li>Arjun Rampal as Major Iqbal </li>
+                            <li>Brendan Fraser as Rick O'Connell</li>
+                            <li>Rachel Weisz as Evelyn Carnahan</li>
+                            <li>John Hannah as Jonathan Carnahan</li>
+                            <li>Arnold Vosloo as Imhotep</li>
+                            <li>Kevin J. O'Connor as Beni Gabor</li>
                         </ul>
 
                     </ul>
@@ -183,50 +182,48 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                ADVENTURE </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="./mummy.html"><img src="https://i.pinimg.com/1200x/b7/aa/7b/b7aa7bba144f4e8e07edf6febcb2bdb9.jpg"
+                    alt="Image 4"></a>
+            <h3>The Mummy
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★5.4</h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/dangal.html"> <img
-                    src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg" alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <a href="./dragon.html"> <img src="https://i.pinimg.com/736x/f5/1f/41/f51f41d966ed176d1d831f7c46a4cf60.jpg"
+                    alt="Image 2"></a>
+            <h3>HTTY Dragon 3
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.8
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img
-                    src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg" alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <a href="./bahubali.html"> <img
+                    src="https://i.pinimg.com/736x/46/6f/1f/466f1f61310dda36827ca9084eba61c4.jpg" alt="Image 3"></a>
+            <h3>Bahubali 2
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;★8.0</h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
-                    src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg" alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
+            <a href="./king_kong.html"> <img
+                    src="https://i.pinimg.com/1200x/5d/5b/c5/5d5bc50c0066a01d7d3d5b99ccb19086.jpg" alt="Image 1"></a>
+            <h3>King Kong &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;★7.2</h3>
 
         </div>
 
 
 
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img
-                    src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg" alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <a href="./jurassic_world.html"> <img
+                    src="https://i.pinimg.com/736x/94/0d/72/940d72746e330addf615a9d7ca9ba445.jpg" alt="Image 5"></a>
+            <h3>Jurassic World
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★5.9
             </h3>
         </div>
     </div>
