--- a/CINESTOP/html/movies/horror/conjuring.html
+++ b/CINESTOP/html/movies/horror/conjuring.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bollywood</title>
+    <title>Horror</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +105,7 @@
     <br><br><br>
 
     <div>
-        <h1 class="contact-heading">DANGAL (2016)</h1>
+        <h1 class="contact-heading">THE CONJURING - LAST RITES (2025)</h1>
     </div>
 
 
@@ -113,44 +113,24 @@
         <div class="movie-left">
             <h2 class="contact-left-heading">About The <span> Movie </span></h2>
             <p class="contact-left-para" style="color: lightgray;">
-                Dangal (transl. 'wrestling bout') is a 2016 Indian Hindi-language biographical sports drama film
-                directed by Nitesh Tiwari and produced by Aamir Khan and Kiran Rao under Aamir Khan Productions with
-                Siddharth Roy Kapur under The Walt Disney Company India. The film stars Khan as Mahavir Singh Phogat, a
-                pehlwani amateur wrestler who trains his daughters Geeta Phogat and Babita Kumari to become India's
-                first world-class female wrestlers.[9] Fatima Sana Shaikh and Sanya Malhotra portray the adult versions
-                of the two Phogat sisters, Zaira Wasim and Suhani Bhatnagar their younger versions, Sakshi Tanwar their
-                mother, and Aparshakti Khurana adult version of their cousin, Ritvik Sahore his younger version, all of
-                them except Shaikh, Tanwar and Sahore in their film debuts. <br>
-
-                Development on the film began in early 2013 when Tiwari began writing the script. Khan had interviewed
-                the Phogat sisters in 2014 on his talk show Satyamev Jayate, before Tiwari approached him with the
-                script months later, after which Khan became the lead actor and producer. Set primarily in the Indian
-                state of Haryana, principal photography commenced in September 2015 in the neighbouring Punjab.[10]
-                Satyajit Pande served as the cinematographer and Ballu Saluja as the editor. Pritam scored the film's
-                background music and soundtrack, lyrics for which were written by Amitabh Bhattacharya.[11][12] Kripa
-                Shankar Patel Bishnoi, a coach with the Indian women's wrestling team, trained Khan and the cast for the
-                wrestling sequences.[13] <br>
-
-                Dangal was a commercial success, setting several records at the box office including highest-grossing
-                Hindi film, highest-grossing Indian film worldwide, the 46th highest-grossing non-English film (5th
-                highest at the time of release),[23][24] and the 19th highest-grossing sports film worldwide.[25]
-                Produced on a budget of ₹70 crore (US$8.3 million),[3] the film grossed ₹1,968−2,024 crore (US$340
-                million), worldwide by various different estimates, including $216.2 million in China,[28]
-                becoming one of the country's top 20 highest-grossing foreign films.[29] According to some estimates, it
-                remains the only Indian film to cross the ₹2000 crore mark, to this day.[30] The film has also been
-                watched more than 400 million times on Chinese streaming platforms, as of November 2018.</p>
-
+                The Conjuring: Last Rites is a 2025 American supernatural horror film directed by Michael Chaves and
+                written by Ian Goldberg, Richard Naing, and David Leslie Johnson-McGoldrick. The film is the ninth
+                installment in The Conjuring film series, and is based on the real-life investigations of the Smurl
+                haunting case.[6] It stars Patrick Wilson and Vera Farmiga, who reprise their roles as paranormal
+                investigators Ed and Lorraine Warren, along with Mia Tomlinson and Ben Hardy.
+                <br>
+                The Conjuring: Last Rites was released in the United States on September 5, 2025, by Warner Bros.
+                Pictures. The film received mixed reviews from critics and grossed $494.6 million, becoming the
+                highest-grossing film in the series.
             <h2 class="contact-left-heading"> Movie <span> Awards </span></h2>
             <ul style="list-style-type: square;">
-                <li style="color: lightgray;">Filmfare Awards</li>
-                <li style="color: lightgray;">Mirchi Music Awards</li>
-                <li style="color: lightgray;">News 18 Movie Awards</li>
-                <li style="color: lightgray;">Zee Cine Awards</li>
-                <li style="color: lightgray;">Indian Film Festival of Melbourne </li>
+                <li style="color: lightgray;">People’s Choice Awards — Favorite Movie</li>
+                <li style="color: lightgray;">MTV Movie Awards — Best Scared-As-Sh*t Performance</li>
+                <li style="color: lightgray;">People’s Choice Awards — Favorite Horror Movie</li>
+                <li style="color: lightgray;">Saturn Awards — Best Horror</li>
+                <li style="color: lightgray;">Saturn Awards — Best Actress</li>
             </ul>
             <br>
-
-
 
         </div>
 
@@ -160,23 +140,23 @@
                 <button id="submit"> <a href="" style="text-decoration: none; color: white;">▶ WATCH NOW </a></button>
                 <div style="margin-left: -20px; margin-top: 27px;">
                     <ul style="list-style-type: none;">
-                        <li> <span style="font-weight: bold;">Genre:</span> Sport</li>
-                        <li> <span style="font-weight: bold;"> Release Date: </span> 23 Dec 2016</li>
-                        <li> <span style="font-weight: bold;">Directed By: </span> Nitesh Tiwari</li>
+                        <li> <span style="font-weight: bold;">Genre:</span> Horror</li>
+                        <li> <span style="font-weight: bold;"> Release Date: </span> 5 September 2025</li>
+                        <li> <span style="font-weight: bold;">Directed By: </span> 	Michael Chaves</li>
                         <li> <span style="font-weight: bold;">Ratings: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>IMDb Rating: 8.3/10
+                            <li>IMDb Rating: 7.3/10
                             </li>
-                            <li>Rotten Tomatoes: 88%
+                            <li>Rotten Tomatoes: 83%
                             </li>
                         </ul>
                         <li> <span style="font-weight: bold;">Cast: </span></li>
                         <ul style="list-style-type: square;">
-                            <li>Aamir Khan as Mahavir Singh</li>
-                            <li>Sakshi Tanwar as Daya Shobha</li>
-                            <li>Fatima Shaikh as Geeta Phogat</li>
-                            <li>Sanya Malhotra as Babita Kumari  </li>
-                            <li>Aparshakti Khurana as Omkar Singh</li>
+                            <li>Vera Farmiga as Lorraine Warren</li>
+                            <li>Patrick Wilson as Ed Warren</li>
+                            <li>Mia Tomlinson as Judy Warren</li>
+                            <li>Ben Hardy as Tony Spera</li>
+                            <li>Rebecca Calder as Janet Smurl</li>
                         </ul>
 
                     </ul>
@@ -189,50 +169,51 @@
 
     <div>
         <h1 style=" padding: 13px; margin-left: 20px; margin-top: -20px;" class="contact-left-heading"> MORE <span>
-                BOLLYWOOD </span></h1>
+                HORROR </span></h1>
     </div>
-
     <div style="display: inline; margin-left: 5.5vw; margin-top: 8px;">
         <div class="movie-card-holder">
-            <a href="../bollywood/war.html"><img
-                    src="https://i.pinimg.com/736x/7e/4a/69/7e4a690244c526b6b922a613e1859a14.jpg" alt="Image 4"></a>
-            <h3>WAR
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.6</h3>
+            <a href="./conjuring.html"> <img
+                    src="https://m.media-amazon.com/images/M/MV5BMWQyMzU1YWItYzczYy00MGZiLTg1ZTUtY2QwMWViNGQxNmJhXkEyXkFqcGc@._V1_.jpg"
+                    alt="Image 1"></a>
+            <h3>The Conjuring &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.2</h3>
+
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img src="https://i.pinimg.com/736x/7b/fc/85/7bfc85e7a11d62a90aa58cd395529622.jpg"
+            <a href="./ring.html"> <img
+                    src="https://resizing.flixster.com/dpjFWDZl4Ha3ETv97N81MCfYZqA=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzQ4MzhhMzBkLTQ1ZWYtNDk1Mi1iN2RjLTg1N2JiZWZmZDg1My53ZWJw"
                     alt="Image 2"></a>
-            <h3>Dangal
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3
+            <h3>The Ring
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.1
             </h3>
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood/pk.html"> <img src="https://i.pinimg.com/736x/e4/04/d1/e404d1acd0a1715808d9f98a63650226.jpg"
+            <a href="./sinister.html"> <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeo424Bl5Z2SoBGbAQToVqORmV8Atj16HgBQ&s"
                     alt="Image 3"></a>
-            <h3>PK
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;★8.1</h3>
+            <h3>Sinister
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★6.8
+            </h3>
 
         </div>
 
         <div class="movie-card-holder">
-            <a href="../bollywood//dhurandhar.html"> <img src="https://i.pinimg.com/736x/7e/d7/19/7ed719c4afc3037518a687d37e9835fa.jpg"
-                    alt="Image 1"></a>
-            <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.6</h3>
-
+            <a href="./tumbbad.html"><img
+                    src="https://lh6.googleusercontent.com/proxy/b-Dj8RlGblXtO43JnUmixYgyuJS427Wg-eKga1mvZp5_zrXPUB4xPjwG5g6OASSk45PF5LSgsi7iDSa3JEfrEFrQ9S7iFwvbb0kpzfxjBf2WOya6"
+                    alt="Image 4"></a>
+            <h3>Tumbbad
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.2
+            </h3>
         </div>
 
-
-
         <div class="movie-card-holder">
-            <a href="../bollywood/chennai_express.html"> <img src="https://i.pinimg.com/736x/09/d9/ac/09d9ac7d0b66e37b7e8a79e602ffc77e.jpg"
+            <a href="./witch.html"> <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1kahcAqgZA1_Y5M8MRKFgu6VsZVwo25gWbg&s"
                     alt="Image 5"></a>
-            <h3>Chennai Express
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ★6.2
+            <h3>The Witch
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★7.0
             </h3>
         </div>
     </div>
